discussion/kv_engine/159759/159759_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48038: Change

Change-Id: I1061081e28cd89ec2714cc059493db59392011f4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-08-20 07:51:54.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-20 08:01:36.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38831/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(479): error C2039: "cursorMemoryFreed": is not a member of "EPStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38831/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11509/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11: error: no member named "cursorMemoryFreed" in "EPStats" [clang-diagnostic-error]
    stats.cursorMemoryFreed += memoryFreed;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:32: error: use of undeclared identifier "memoryFreed" [clang-diagnostic-error]
    stats.cursorMemoryFreed += memoryFreed;
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11509/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11509/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33103/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13114/ : FAILURE

Compile error at [2021-08-20T07:54:16.248Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: ?class EPStats? has no member named ?cursorMemoryFreed?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13114/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13326/ : FAILURE

Compile error at [2021-08-20T07:53:56.251Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: ?class EPStats? has no member named ?cursorMemoryFreed?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1156/ : FAILURE

Compile error at [2021-08-20T07:55:21.363Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: ?class EPStats? has no member named ?cursorMemoryFreed?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1156/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1147/ : FAILURE

Compile error at [2021-08-20T07:54:10.139Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1147/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21242/ : FAILURE

Compile error at [2021-08-20T07:54:25.140Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21242/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13708/ : FAILURE

Compile error at [2021-08-20T07:53:03.306Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13708/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12234/ : FAILURE

Compile error at [2021-08-20T07:54:34.900Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/checkpoint_manager.cc:479:11:
error: no member named "cursorMemoryFreed" in "EPStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12234/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10243/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
